# File-validation

./: README.md  main.py  pyproject.toml
contracts/: meu_schema.py
data/: Key Words Pesquisa automática de legislação 3.xlsx
logs/: log_config.py
src/: classes.py  etl.py  frontend.py
